prevent jump between markdown toggle

--- a/packages/commonwealth/client/styles/components/react_quill/react_quill_editor.scss
+++ b/packages/commonwealth/client/styles/components/react_quill/react_quill_editor.scss
@@ -60,6 +60,7 @@
 .QuillEditorWrapper {
   border-radius: 6px;
   border: 1px solid $neutral-200;
+  min-height: 255px;
 
   &.isFocused {
     border: 1px solid $primary-500;
